--- a/i18n/fr/docusaurus-plugin-content-docs/current/community/05.faq.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/community/05.faq.mdx
@@ -29,7 +29,7 @@ Plus d’informations sur [cette page](/admin/what_is_yunohost) !
 #### Puis-je gérer mon propre site web avec YunoHost ?
 
 Oui ! Il faut regarder du côté de [cette app](https://github.com/YunoHost-Apps/my_webapp_ynh).
-Elle fournit une « coquille vide » : après l’installation, il suffit d’envoyer vos fichiers (via SSH/SCP ou SFTP) au bon endroit. Il est aussi possible d’avoir du PHP et une base de donnée SQL si besoin.
+Elle fournit une « coquille vide » : après l’installation, il suffit d’envoyer vos fichiers (via SSH/SCP ou SFTP) au bon endroit. Il est aussi possible d’avoir du PHP et une base de données SQL si besoin.
 
 #### Peut-on héberger plusieurs sites indépendants avec des noms de domaines différents ?
 
