--- a/i18n/fr/docusaurus-plugin-content-docs/current/community/10.help.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/community/10.help.mdx
@@ -37,13 +37,13 @@ Merci de changer votre nom d'utilisateur, car nous avons beaucoup d'utilisateurs
 [/center] --> */}
 
 :::tip
-Ce salon de discussion est disponibles via
+Ce salon de discussion est disponible via
 - Matrix (`#yunohost:matrix.org` [en utilisant Element](https://riot.im/app/#/room/#yunohost:matrix.org?target=_blank))
 - IRC (`#yunohost` avec libera.chat, [en utilisant kiwiirc](https://web.libera.chat/#yunohost))
 - XMPP (`support@conference.yunohost.org`)
 :::
 
-**NB : Actuellement, la passerelle IRC ([grace à Matrix](https://libera.chat/guides/faq#are-bridges-allowed)) est désactivé. Alors que les canaux XMPP et Matrix sont connectés, le canal IRC ne l'est pas**.
+**NB : Actuellement, la passerelle IRC ([grâce à Matrix](https://libera.chat/guides/faq#are-bridges-allowed)) est désactivée. Alors que les canaux XMPP et Matrix sont connectés, le canal IRC ne l'est pas**.
 
 ## ... ou demandez sur le forum!
 
