--- a/i18n/fr/docusaurus-plugin-content-docs/current/community/90.terms_of_services.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/community/90.terms_of_services.mdx
@@ -14,7 +14,7 @@ En utilisant ces services, vous acceptez d’être lié·e par les conditions su
 
 - **Clause « Ceci est un projet communautaire »** : vous acceptez et respectez le fait que le projet est maintenu par une équipe bénévole, et que le temps et l'énergie bénévole sont la force motrice du projet. Les contributions au projet sont les bienvenues, ponctuelles ou dans la durée, par le moyen de votre choix (que ce soit en parler autour de vous, nous faire des retours constructifs, aider les autres, faire coucou, traduire, tester, coder, donner, ...).
 - **Clause « On fait ce qu'on peut »** : vous acceptez que l'équipe bénévole fait du mieux qu'elle peut et n'est assujettie à aucune obligation, ni de moyen, ni de résultat. Le projet ne peut être tenu pour responsable des dommages ou préjudices indirects si un service cesse de fonctionner. L'équipe peut décider d'arrêter un service à tout moment.
-- **Clause « On n'est pas un GAFAM »** : nous essayons de minimiser le plus possible les données personnelles qui peuvent transiter, être stockées sur notre infrastructure ou être transférée vers des tiers. Nous publions le code qui fait tourner nos services. Nous nous interdisons toute revente de données personnelles. Nous n'exploitons les données qu'à des fin de statistiques internes et anonymisées.
+- **Clause « On n'est pas un GAFAM »** : nous essayons de minimiser le plus possible les données personnelles qui peuvent transiter, être stockées sur notre infrastructure ou être transférées vers des tiers. Nous publions le code qui fait tourner nos services. Nous nous interdisons toute revente de données personnelles. Nous n'exploitons les données qu'à des fins de statistiques internes et anonymisées.
 - **Clause « On n'aime pas les personnes toxiques »** : vous devez respecter les autres membres de la communauté en faisant preuve de civisme, de politesse et bienveillance.
 - **Clause « Le logiciel libre, ce n'est pas des bénévoles à vos ordres »** : les messages se contentant de demander quand une fonctionnalité, correctif ou mise à jour sera disponible, volontairement ou involontairement insistants, sans aucune forme de politesse, de bienveillance ou d'intention de contribution, ne sont pas les bienvenus. Si vous souhaitez qu'un point en particulier soit traité, demandez-vous comment contribuer, ou a minima parlez-en avec bienveillance.
 - **Clause « On ne lit pas dans les boules de cristal »** : le forum et chat d'entraide stipulent clairement que pour espérer obtenir de l'aide, il est nécessaire de fournir les informations de base (type de matériel, version de YunoHost), des éléments de contexte et les journaux complets. Ne pas le faire est extrêmement agaçant pour les bénévoles qui tentent de vous aider.
@@ -42,7 +42,7 @@ Les services administrés et maintenus par le projet sont, à ce jour :
 - un site web public, destiné à présenter le projet et à fournir de la documentation ;
 - l'hébergement de scripts d'installation, d'images, de paquets et de clés cryptographiques liés à l'installation et à la mise à jour de YunoHost ;
 - un forum communautaire public, destiné à s'entraider et discuter des problèmes ou de tout autre sujet lié au projet ;
-- un catalogue d'application public pour permettre de présenter et voter pour les applications disponibles, et une API permettant à des programmes de récupérer cette liste ;
+- un catalogue d'applications public pour permettre de présenter et voter pour les applications disponibles, et une API permettant à des programmes de récupérer cette liste ;
 - un service pastebin, destiné à partager facilement les logs et autres informations techniques ;
 - un service de nom de domaine gratuit, destiné à réduire les frictions pour les personnes qui ne possèdent pas encore de nom de domaine ou qui souhaitent une solution simple et rapide dans le contexte de YunoHost ;
 - des services d'auto-diagnostic utilisés par le logiciel YunoHost et destinés à aider les utilisateurices à diagnostiquer de manière autonome les problèmes techniques ;
@@ -78,7 +78,7 @@ Les fonctionnalités suivantes sont accessibles via un compte :
 
 - l'écriture sur le forum ;
 - le vote pour les applications du catalogue (sur `apps.yunohost.org`) ;
-- la réservation et la gestion de noms de domaines dynamiques fournit par le projet YunoHost (`nohost.me`, `noho.st` et `ynh.fr`).
+- la réservation et la gestion de noms de domaines dynamiques fournis par le projet YunoHost (`nohost.me`, `noho.st` et `ynh.fr`).
 
 Le compte sur le forum et le compte gérant votre nom de domaine peuvent être résiliés grâce aux identifiants associés.
 
@@ -86,19 +86,19 @@ Le compte sur le forum et le compte gérant votre nom de domaine peuvent être r
 
 ### Conditions financières
 
-**L’ensemble des services est fournie gratuitement. N’hésitez pas à soutenir le projet YunoHost en faisant un don.**
+**L’ensemble des services est fourni gratuitement. N’hésitez pas à soutenir le projet YunoHost en faisant un don.**
 
 ### Intervention en cas de panne
 
 **En cas de panne constatée, et si aucun message n’atteste sur le forum que le projet YunoHost est en train de corriger le dysfonctionnement, nous vous encourageons à faire un signalement via le chat ou le forum.**
 
-Le projet YunoHost propose l’ensemble de ces services grâce à des bénévoles qui feront de leur mieux pour résoudre les problèmes techniques qui pourraient subvenir. Les bénévoles n'ont aucune obligation à réparer un service cassé.
+Le projet YunoHost propose l’ensemble de ces services grâce à des bénévoles qui feront de leur mieux pour résoudre les problèmes techniques qui pourraient survenir. Les bénévoles n'ont aucune obligation à réparer un service cassé.
 
 En cas d’incapacité à résoudre un problème technique, le projet YunoHost pourra prendre la décision de fermer le service.
 
 ### Devenir des services
 
-Le projet YunoHost ne garanti pas que les services continueront à fonctionner éternellement, et peut choisir d’arrêter des services si le projet estime ne plus être en mesure de fournir lesdits services.
+Le projet YunoHost ne garantit pas que les services continueront à fonctionner éternellement, et peut choisir d’arrêter des services si le projet estime ne plus être en mesure de fournir lesdits services.
 
 Si le collectif qui anime le projet YunoHost en a la possibilité, il fera de son mieux pour laisser un délai suffisant pour permettre à tout le monde de migrer ou de s'adapter sereinement.
 
@@ -176,7 +176,7 @@ Conformément à l’article 34 de la loi « Informatique et Libertés », vous 
 - droit à la portabilité des données ;
 - droit de ne pas faire l’objet d’une décision individuelle automatisée.
 
-### Règlement général sur la protection des donnée (RGPD)
+### Règlement général sur la protection des données (RGPD)
 
 Le projet YunoHost s’engage, vis à vis des services qu'il met à disposition, à respecter la réglementation en vigueur applicable au traitement de données à caractère personnel et, en particulier, le règlement (UE) 2016/679 du Parlement européen et du Conseil du 27 avril 2016 applicable à compter du 25 mai 2018, dite RGPD.
 
@@ -233,7 +233,7 @@ Comme n'importe quel service web, un journal technique existe enregistrant l'IP 
 Vous utilisez ce service dans 2 situations:
 
 - installation ou restauration de YunoHost ;
-- (plus rare) installation, mise à jour, ou restauration d'une app dont le binaire n'est pas fournis par son éditeur et dont sa compilation sur votre propre machine est jugée trop longue ou trop coûteuse en ressources.
+- (plus rare) installation, mise à jour, ou restauration d'une app dont le binaire n'est pas fourni par son éditeur et dont sa compilation sur votre propre machine est jugée trop longue ou trop coûteuse en ressources.
 
 #### Adresse du service
 
@@ -245,7 +245,7 @@ Comme n'importe quel service web, un journal technique existe enregistrant l'IP 
 
 ### IP
 
-Ce service est utilisé automatiquement par vos instances YunoHost pour déterminer leurs IP publiques et permettre ainsi l'automatisation et le diagnostique de certaines opérations.
+Ce service est utilisé automatiquement par vos instances YunoHost pour déterminer leurs IP publiques et permettre ainsi l'automatisation et le diagnostic de certaines opérations.
 
 #### Adresses des services
 
@@ -269,7 +269,7 @@ Il s'agit du service utilisé si vous demandez un nom de domaine terminant par `
 
 #### Limite d'usage
 
-Ce service est proposé dans la limite d'un seul domaine par serveur YunoHost (bien qu'il soit possible de configurer des sous-domaine de ce domaine). Si des abus sont constatés (par exemple création de trop nombreux domaines depuis la même machine ou IP, ou création automatisée à large échelle), le projet se réserve le droit de supprimer les domaines concernés sans prévenir.
+Ce service est proposé dans la limite d'un seul domaine par serveur YunoHost (bien qu'il soit possible de configurer des sous-domaines de ce domaine). Si des abus sont constatés (par exemple création de trop nombreux domaines depuis la même machine ou IP, ou création automatisée à large échelle), le projet se réserve le droit de supprimer les domaines concernés sans prévenir.
 
 #### Suppression automatique
 
@@ -287,11 +287,11 @@ Notez que, pour fonctionner, ce service stocke et transmet nécessairement les a
 
 Comme n'importe quel service web, un journal technique existe enregistrant l'IP et le User Agent des requêtes.
 
-### Diagnostique
+### Diagnostic
 
 Il s'agit d'un service permettant de tester automatiquement si vos services semblent correctement exposés sur internet et ainsi résoudre en autonomie les problèmes liés à la configuration réseau.
 
-Ce service est utilisé automatiquement deux fois par jour, dès lors que vous activez la fonctionnalité de diagnostique.
+Ce service est utilisé automatiquement deux fois par jour, dès lors que vous activez la fonctionnalité de diagnostic.
 
 #### Adresse du service
 
@@ -299,7 +299,7 @@ Ce service est utilisé automatiquement deux fois par jour, dès lors que vous a
 
 #### Limite d'usage
 
-En raison de la consommation de ressources induites, le service de diagnostique est limités à 60 domaines à diagnostiquer par requêtes.
+En raison de la consommation de ressources induites, le service de diagnostic est limité à 60 domaines à diagnostiquer par requêtes.
 
 Si vous dépassez cette limite, le projet recommande de diagnostiquer le bon fonctionnement de vos domaines par vos propres moyens.
 
@@ -333,11 +333,11 @@ Comme n'importe quel service web, un journal technique existe enregistrant l'IP 
 
 #### Statistiques
 
-Afin de dimensionner nos services et planifier les nouvelles versions, nous utilisons le logs techniques de téléchargement de la liste des apps pour estimer le nombre d'instances YunoHost en fonctionnement dans la nature, et le ratio des versions majeures.
+Afin de dimensionner nos services et planifier les nouvelles versions, nous utilisons les logs techniques de téléchargement de la liste des apps pour estimer le nombre d'instances YunoHost en fonctionnement dans la nature, et le ratio des versions majeures.
 
 ### Dépôt de paquet Debian
 
-Il s'agit du canal par lequel les mises à jour de YunoHost en tant que logiciel sont mises à disposition. Le projet YunoHost maintient également des "builds" de certaines briques logicielles dont YunoHost dépends ou à la périphérie du projet.
+Il s'agit du canal par lequel les mises à jour de YunoHost en tant que logiciel sont mises à disposition. Le projet YunoHost maintient également des "builds" de certaines briques logicielles dont YunoHost dépend ou à la périphérie du projet.
 
 #### Adresse du service
 
@@ -359,7 +359,7 @@ En l'état, le développement, les rapports de bug et les demandes de fonctionna
 
 Nous ne pouvons que ré-insister sur ce qui est déjà mentionné dans la section 'Respect de la communauté et des bénévoles' plus haut : le projet est maintenu par une équipe bénévole, le temps et l'énergie bénévole est la force motrice du projet, et les bénévoles font de leur mieux. Vous êtes les bienvenues pour contribuer au projet (et le cas échéant à poser des questions sur comment contribuer) à l'équipe.
 
-En revanche, abuser de leur temps ou de leur énergie équivaut à saboter le projet. En particulier, YunoHost n'est *pas* une communauté de bénévoles à vos ordres sur les priorités de correctifs, fonctionnalités ou mises à jour, ni pour YunoHost en tant que logiciel, ni pour le catalogue d'applications maintenues par le projet. Les bénévoles ne promettent ni support, ni correctifs, ni fonctionnalités, ni mise à jour, et ne fournissent pas non plus d'estimation sur "quand" une fonctionnalité, correctif ou mise à jour sera disponible. Les messages se contentant de demander quand une fonctionnalité, correctif ou mise à jour sera disponible, sans aucune forme de politesse, de bienveillance ou d'intention de contribution, ne sont pas les bienvenus et sapent le moral des bénévoles. Tout abus pourra être sanctionné par un bannissement des organisations GitHub du projet, voir de l'entièreté des services du projet.
+En revanche, abuser de leur temps ou de leur énergie équivaut à saboter le projet. En particulier, YunoHost n'est *pas* une communauté de bénévoles à vos ordres sur les priorités de correctifs, fonctionnalités ou mises à jour, ni pour YunoHost en tant que logiciel, ni pour le catalogue d'applications maintenues par le projet. Les bénévoles ne promettent ni support, ni correctifs, ni fonctionnalités, ni mise à jour, et ne fournissent pas non plus d'estimation sur "quand" une fonctionnalité, correctif ou mise à jour sera disponible. Les messages se contentant de demander quand une fonctionnalité, correctif ou mise à jour sera disponible, sans aucune forme de politesse, de bienveillance ou d'intention de contribution, ne sont pas les bienvenus et sapent le moral des bénévoles. Tout abus pourra être sanctionné par un bannissement des organisations GitHub du projet, voire de l'entièreté des services du projet.
 
 ### Paste
 
@@ -383,7 +383,7 @@ Comme n'importe quel service web, un journal technique existe enregistrant l'IP 
 
 #### Demander de l'aide
 
-Le forum et chat d'entraide stipulent clairement (par exemple [ici](/community/help), [ici](https://forum.yunohost.org/t/asking-for-support-demander-de-laide/7795) et [ici](https://forum.yunohost.org/t/how-to-get-help-efficiently-comment-obtenir-de-laide-efficacement/27)) que pour espérer obtenir de l'aide, il est **nécessaire** de fournir les informations de base (type de matériel, version de YunoHost), des éléments de contexte et les journaux complets. Ne pas le faire est extrêmement agaçant pour les personnes qui tentent de vous aider, d'autant plus que nous nous efforçons de simplifier au maximum le partage de ces informations. De plus c'est contre-productif car cela fait perdre du temps à tout le monde : on ne peux pas résoudre un problème qu'on ne peut diagnostiquer.
+Le forum et chat d'entraide stipulent clairement (par exemple [ici](/community/help), [ici](https://forum.yunohost.org/t/asking-for-support-demander-de-laide/7795) et [ici](https://forum.yunohost.org/t/how-to-get-help-efficiently-comment-obtenir-de-laide-efficacement/27)) que pour espérer obtenir de l'aide, il est **nécessaire** de fournir les informations de base (type de matériel, version de YunoHost), des éléments de contexte et les journaux complets. Ne pas le faire est extrêmement agaçant pour les personnes qui tentent de vous aider, d'autant plus que nous nous efforçons de simplifier au maximum le partage de ces informations. De plus c'est contre-productif car cela fait perdre du temps à tout le monde : on ne peut pas résoudre un problème qu'on ne peut diagnostiquer.
 
 Si ces règles ne sont pas respectées, l'équipe se réserve le droit de fermer votre sujet sans préavis.
 
