--- a/i18n/es/docusaurus-plugin-content-docs/current/community/20.chat_rooms.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/community/20.chat_rooms.mdx
@@ -2,7 +2,7 @@
 title: Salas de chat
 ---
 
-El proyecto YunoHost utiliza salas de chat como medio de communicación.
+El proyecto YunoHost utiliza salas de chat como medio de comunicación.
 
 Puede unirse a una sala de chat utilizando :
 
@@ -12,26 +12,26 @@ Puede unirse a una sala de chat utilizando :
 
 #### Sala de chat de ayuda y soporte
 
-Existen salas publicas de chat de [soporte](/community/help) y ayuda para YunoHost:
+Existen salas públicas de chat de [soporte](/community/help) y ayuda para YunoHost:
 
 - Matrix: **[`#yunohost:matrix.org`](https://matrix.to/#/#yunohost:matrix.org)** ;
 - XMPP: **[`support@conference.yunohost.org`](xmpp:support@conference.yunohost.org?join)**
 - IRC: **`#yunohost`** on libera.chat ;
 
-#### sala de chat para desarrolladores {#development-chat-room}
+#### Sala de chat para desarrolladores {#development-chat-room}
 
-Salas de chat para el desarollo de YunoHost:
+Salas de chat para el desarrollo de YunoHost:
 
 - Matrix: **#[`yunohost-dev:matrix.org`](https://matrix.to/#/#yunohost-dev:libera.chat)** ;
 - XMPP: **[`dev@conference.yunohost.org`](xmpp:dev@conference.yunohost.org?join)**
 - IRC: **`#yunohost-dev`** on libera.chat ;
 
 Actualmente, la sala principal de chat para contribuciones en YunoHost
-Para mas ayuda, vea la sala de chat **`#yunohost`** encima.
+Para más ayuda, vea la sala de chat **`#yunohost`** encima.
 
 #### Sala de chat para las integración de aplicaciones
 
-Estos permite la ayuda mutua para los integradores de aplicaciones y también para conversar de evoluciones et de herramientas de integración continua.
+Esto permite la ayuda mutua para los integradores de aplicaciones y también para conversar sobre las evoluciones y herramientas de integración continua.
 
 - Matrix: **[`#yunohost-apps:matrix.org`](https://matrix.to/#/#yunohost-apps:matrix.org)**
 - XMPP: **[`apps@conference.yunohost.org`](xmpp:apps@conference.yunohost.org?join)**
@@ -39,8 +39,8 @@ Estos permite la ayuda mutua para los integradores de aplicaciones y también pa
 
 #### Sala de chat de Documentación
 
-Lugar donde la comunidad conversa sincroniza y mantiene actualisado la documentación en los aspectos varios como (backend, frontend, apps, proyecto, comunidad...)
-Puede tambien compartir sus materiales sobre YunoHost (videos, presentaciones, etc.).
+Lugar donde la comunidad conversa, sincroniza y mantiene actualizada la documentación en los varios aspectos como (backend, frontend, apps, proyecto, comunidad...)
+Puede también compartir sus materiales sobre YunoHost (vídeos, presentaciones, etc.).
 
 - Matrix: **[`#yunohost-doc:matrix.org`](https://matrix.to/#/#yunohost-doc:matrix.org)**
 - XMPP: **[`doc@conference.yunohost.org`](xmpp:doc@conference.yunohost.org?join)**
