Fix typo and link to section

--- a/docs/dev/10.doc.mdx
+++ b/docs/dev/10.doc.mdx
@@ -6,7 +6,7 @@ The YunoHost documentation is managed through [this Git repository](https://gith
 
 **You do not need Git expertise just to improve an existing page** (you will need an account on the platform, though): there is an "Edit" button at the bottom of each page that will redirect you to the GitHub online editor where you make easily make change proposals (a.k.a Pull Request, PR).
 
-However, if you are on an editing spree, you probably want to work locally and submit a set of changes (a.k.a. a Pull Request, PR). In which case, refer to the section "Working locally on th documentation" below.
+However, if you are on an editing spree, you probably want to work locally and submit a set of changes (a.k.a. a Pull Request, PR). In which case, refer to [the section "Working locally on the documentation" below](#working-locally-on-the-documentation).
 
 ## Markdown
 
