fix(docs): command 'ncdu' and not 'ndcu'

--- a/docs/admin/50.troubleshooting/03.cleanup.mdx
+++ b/docs/admin/50.troubleshooting/03.cleanup.mdx
@@ -26,7 +26,7 @@ sudo apt install ncdu
 Then use it to scan the filesystem and have a dynamic, browsable report of what's using space:
 
 ```bash
-ndcu /
+ncdu /
 ```
 
 or `ncdu /var/`, for example to scan only `/var/`
