Update Larch site and documentation links
Updated links to the Larch site and documentation.

--- a/docs/admin/35.email/10.migration.mdx
+++ b/docs/admin/35.email/10.migration.mdx
@@ -31,7 +31,7 @@ Note that transfer settings `--port 993` and `--ssl` are specific to YunoHost em
 
 ### Larch
 
-[Larch site](https://github.com/rgrove/larch/)
+[New Larch site](https://github.com/driftlesslabs/larch)
 
 After beforehand installed `gem`, install `larch` on your client computer:
 
@@ -45,4 +45,4 @@ Transfer emails from one server to another:
 larch -a -f imaps://server_of_origin.org -t imaps://server_of_destination.org
 ```
 
-For other types of transfer refer to [Larch documentation](https://github.com/rgrove/larch#label-Usage).
+For other types of transfer refer to [New Larch documentation](https://larch.driftless.xyz/v6.0/index.html) [Old Larch documentation](https://github.com/rgrove/larch#label-Usage).
